Bug 135083 - Bullet goes missing on special paste RTF
Summary: Bullet goes missing on special paste RTF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: filter:rtf target:24.8.0 target:24.2.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Paste
  Show dependency treegraph
 
Reported: 2020-07-23 19:22 UTC by Telesto
Modified: 2024-01-17 12:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (10.38 KB, application/vnd.oasis.opendocument.text)
2020-07-23 19:22 UTC, Telesto
Details
Bibisect log (3.07 KB, text/plain)
2020-07-24 08:42 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-07-23 19:22:31 UTC
Description:
Bullet goes missing on special paste RTF

Steps to Reproduce:
1. Open the attached file
2. CTRL+A
3. CTRL+C
4. CTRL+SHIFT+V -> RTF

Actual Results:
Last bullet missing

Expected Results:
All bullets


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 52820b52b3bca45e2db527d1cc5f4488b2e0b9d0
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and in 
6.0

not in
4.4.7.2
Comment 1 Telesto 2020-07-23 19:22:45 UTC
Created attachment 163460 [details]
Example file
Comment 2 V Stuart Foote 2020-07-23 23:30:17 UTC
The bullet glyph is not missing, rather Writer RTF clipboard filter is dropping the paragraph style for the last paragraph.

Style as bullets is present on the CF_TEXT, CF_UNICODETEXT, and the HTML clipboard formats.
Comment 3 Telesto 2020-07-24 08:42:46 UTC
Created attachment 163471 [details]
Bibisect log

Bisected to:
author	Mike Kaganski <mike.kaganski@collabora.com>	2015-11-01 10:03:50 +1000
committer	Caolán McNamara <caolanm@redhat.com>	2015-11-10 12:34:42 +0000
commit a6ae84cc296d4d28e9a48a57406e955138c87a80 (patch)
tree 063b41de6b566f80742d6a1b057417d7c7fb479d
parent 96a6b7bb1a073b6d2a5c01712b2c9a818c53c77a (diff)
tdf#70318: Prevent extra empty paragraph in clipboard RTF content

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a6ae84cc296d4d28e9a48a57406e955138c87a80
Comment 4 Telesto 2020-07-24 09:09:05 UTC
Adding CC: to Mike Kaganski
Comment 5 Mike Kaganski 2024-01-16 08:13:05 UTC
https://gerrit.libreoffice.org/c/core/+/162154
Comment 6 Commit Notification 2024-01-17 02:40:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e95e3868ff6a4d87b9051fa6219d8818c47c517

tdf#135083: make sure to apply pending paragraph properties, even without

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-01-17 12:00:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/806d07ffa3fa8e0810a00d570c7cfa844cc226ee

tdf#135083: make sure to apply pending paragraph properties, even without

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.